--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,14 @@ body {
 
 li, a, button {
     font-weight: 300;
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-decoration: none;
 }
 
-header {
+.navbar {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 2vh;
-    background-color: black;
 }
 
 .nav_links {
@@ -69,23 +67,14 @@ header {
     margin : 40px auto;
 }
 
-.landing-page{
+.hero{
     width: 100%;
     height: 100vh;
     background: #000;
     position: relative;
     overflow: hidden;
-  }
-  .landing-page::after{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: url(./Images/hero.png) no-repeat;
+    background: url(./Images/hero.png);
     background-size: cover;
-    opacity: .3;
   }
   
   .page-content{
