--- a/styles.css
+++ b/styles.css
@@ -44,22 +44,6 @@ li, a, button {
     text-decoration: underline;
 }
 
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 300;
-    text-decoration: none;
-}
-
-.contact_section {
-    padding: 40px 0;
-    width: 100vw;
-    height: auto;
-}
-
-
-
 .border {
     width: 100px;
     height: 10px;
@@ -121,10 +105,6 @@ li, a, button {
     margin-bottom: 6px;
   }
   
-  .skills_section{
-    background-color: black;
-    padding: 60px 0;
-  }
   .inner-width{
     width: 100%;
     max-width: 1200px;
@@ -143,69 +123,6 @@ li, a, button {
     height: 2px;
     background: #F29A93;
     margin: 40px auto;
-  }
-  .services-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .service-box{
-    max-width: 33.33%;
-    padding: 10px;
-    text-align: center;
-    color: black;
-    cursor: pointer;
-  }
-  
-  .service-icon{
-    display: inline-block;
-    width: 70px;
-    height: 70px;
-    border: 3px solid #F29A93;
-    color: #82ccdd;
-    transform: rotate(45deg);
-    margin-bottom: 30px;
-    margin-top: 16px;
-    transition: 0.3s linear;
-  }
-  .service-icon i{
-    line-height: 70px;
-    transform: rotate(-45deg);
-    font-size: 26px;
-    color: white;
-  }
-  .service-box:hover .service-icon{
-    background: #F29A93;
-    color: black;
-  }
-  .service-title{
-    font-size: 18px;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-    color: white;
-  }
-  .service-desc{
-    font-size: 14px;
-    color: white;
-  }
-  
-  @media screen and (max-width:960px) {
-    .service-box{
-      max-width: 45%;
-    }
-  }
-  
-  @media screen and (max-width:768px) {
-    .service-box{
-      max-width: 50%;
-    }
-  }
-  
-  @media screen and (max-width:480px) {
-    .service-box{
-      max-width: 100%;
-    }
   }
 
 .projects-container{
@@ -271,7 +188,46 @@ li, a, button {
   height: auto;
 }
 
-#contact_section {
+.skills_section{
+  background-color: #2D3038;
+  padding: 40px 0;
+  width: 100vw;
+  height: auto;
+}
+.flex-grid {
+	display: flex;
+	flex-flow: row wrap;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.column {
+  display: flex;
+  flex-basis: 100%;
+	flex: 1;
+	margin: 2px;
+  padding: 10px;
+  justify-content: space-evenly;
+}
+
+.column i{
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
+  font-size: 5rem;
+}
+
+.column h2{
+  color: #F29A93;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.contact_section {
+  padding: 40px 0;
+  width: 100vw;
+  height: auto;
   background-color:#F29A93;
 }
 
@@ -284,8 +240,15 @@ li, a, button {
 .social-icons i{
   color: black;
   transition: all 0.3s ease 0s;
+  font-size: 2rem;
 }
 
 .social-icons i:hover{
   color: white;
+}
+
+.contact_section h6{
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
 }
