--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     font-family: "Montserrat", sans-serif;
     color: black;
     max-width: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -127,7 +128,6 @@ li, a, button {
   }
 
 .projects-container{
-  width: 90%;
   max-width: 120rem;
   height: 100%;
   margin: 0 auto;
@@ -139,6 +139,8 @@ li, a, button {
   align-items: center;
   justify-content: center;
   margin-bottom: 5rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
 }
 
 .portfolio-item :last-child{
@@ -158,23 +160,29 @@ li, a, button {
 }
 
 .portfolio-description > h6{
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-decoration: uppercase;
   font-weight: 300;
-  opacity: 0.3;
+  color: #333;
 }
 
 
 .portfolio-description h1{
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 300;
   margin: 1rem 0;
+  color: #F29A93;
+}
+
+.portfolio-description p{
+  color: #333;
+  font-size: 1rem;
 }
 
 .portfolio-description .cta {
   display: inline-block;
   margin-top: 2.5rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-transform: uppercase;
   color: #F29A93;
 }
